<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        style="@style/Base.Theme.My_Calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero"
        android:textSize="60sp"
        android:textAlignment="textEnd"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/solution"/>

    <TextView
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero"
        android:textSize="55sp"
        android:textAlignment="textEnd"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/button_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/All_Clear"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onClearClick"
                android:text="@string/ac"
                android:textSize="25sp"
                android:textColor="#FF9800" />

            <ImageButton
                android:id="@+id/Delete"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:src="@drawable/backspace"
                android:contentDescription="@string/Delete"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDeleteClick"
                android:textSize="25sp" />

            <Button
                android:id="@+id/percentage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onPercentageClick"
                android:text="@string/percentage"
                android:textSize="30sp"
                android:textColor="#FF9800"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onOperatorClick"
                android:text="@string/divide"
                android:textSize="30sp"
                android:textColor="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/l1">

            <Button
                android:id="@+id/seven"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/seven"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/eight"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/eight"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/nine"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/nine"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/multiply"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onOperatorClick"
                android:text="@string/multiply"
                android:textSize="30sp"
                android:textColor="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/l2">

            <Button
                android:id="@+id/four"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/four"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/five"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/five"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/six"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/six"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onOperatorClick"
                android:text="@string/minus"
                android:textSize="30sp"
                android:textColor="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/l3">

            <Button
                android:id="@+id/one"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/one"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/two"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/two"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/three"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/three"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onOperatorClick"
                android:text="@string/plus"
                android:textSize="30sp"
                android:textColor="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/l4">

            <Button
                android:id="@+id/zero"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/zero"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/decimal"
                style="@style/MyButtonStyle"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onDecimalClick"
                android:text="@string/decimal"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/equal"
                android:layout_width="150dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:background="@android:color/transparent"
                android:layout_weight="2"
                android:onClick="onEqualClick"
                android:text="@string/equal"
                android:textSize="30sp"
                android:textColor="#FF9800"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>